figure and table titles

--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -32,7 +32,7 @@ Table \ref{tbl:case-competition-int-ext} (repeated from Table \ref{tbl:summary-g
 
 \begin{table}[ht]
   \center
-  \caption{Internal and external case allowed}
+  \caption{Pattern of the unrestricted type of language}
   \begin{tabular}{c|c|c|c}
     \toprule
   \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
@@ -70,7 +70,7 @@ Table \ref{tbl:case-competition-only-int} illustrates what the pattern for such 
 
 \begin{table}[ht]
   \center
-  \caption{Only internal case allowed}
+  \caption{Pattern of the internal-only type of language}
   \begin{tabular}{c|c|c|c}
     \toprule
     \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
@@ -110,7 +110,7 @@ Table \ref{tbl:case-competition-only-ext} illustrates what the pattern for such 
 
 \begin{table}[ht]
   \center
-  \caption{Only external case allowed}
+  \caption{Pattern of the external-only type of language}
   \begin{tabular}{c|c|c|c}
     \toprule
     \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
@@ -149,7 +149,7 @@ Table \ref{tbl:case-competition-none} illustrates what the pattern for such a la
 
 \begin{table}[ht]
   \center
-  \caption{Only matching allowed}
+  \caption{Pattern of the matching type of language}
   \begin{tabular}{c|c|c|c}
     \toprule
     \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
@@ -185,13 +185,13 @@ On the surface, this pattern cannot be distinguished from a pattern that does no
 
 In this chapter I show that three of the four patterns I introduced are attested crosslinguistically. Section \ref{sec:pattern-i} shows that the unrestricted type, in which either the internal case or the external case can surface, is exemplified by Gothic (repeated from Chapter \ref{ch:recurring}) and by Old High German. The internal-only type, in which only the internal case can surface, is illustrated by Modern German in Section \ref{sec:pattern-ii}. To my knowledge, there is no language in which only the external case can surface when it wins the case competition. This is discussed in \ref{sec:pattern-iii}. Section \ref{sec:pattern-iv} shows a language that only allows the case to surface when there is a tie, i.e. when the internal and external case match, namely Polish.
 
-\section{Internal and external case allowed}\label{sec:pattern-i}
+\section{The unrestricted type of language}\label{sec:pattern-i}
 
 This section discusses the situation in which the internal case and the external case are allowed to surface when either of them wins the case competition. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-int-ext-repeated}.
 
 \begin{table}[ht]
   \center
-  \caption{Internal and external case allowed (repeated)}
+  \caption{Pattern of the unrestricted type of language (repeated)}
   \begin{tabular}{c|c|c|c}
     \toprule
     \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
@@ -507,7 +507,7 @@ Note that the two languages of the unrestricted type that I discuss are both ext
 }
 
 
-\section{Only internal case allowed}\label{sec:pattern-ii}
+\section{The internal-only type of language}\label{sec:pattern-ii}
 
 %there is variation, see vogel 2011 on exceptions. sometimes modern german seems to be like polish, sometimes like itself and sometimes like gothic. (1) in case of polish: do these headless relatives maybe have a definite interprettaion, and the light head is not r but der? then it cannot be deleted! (2) in case of modern german: it is really wen - r, (3) there is a syncretism between acc and dat (object case, brandenburg) or between nom and acc (see also was already being a syncretism), so that's why this is all allowed. the nom-dat incompatibility corroborates this hypothesis
 
@@ -515,7 +515,7 @@ This section discusses the situation in which only the internal case is allowed 
 
 \begin{table}[ht]
   \center
-  \caption{Only internal case allowed (repeated)}
+  \caption{Pattern of the internal-only type of language (repeated)}
   \begin{tabular}{c|c|c|c}
     \toprule
     \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
@@ -883,13 +883,13 @@ I leave it for future research to find out whether other case combinations in Fi
 
 
 
-\section{Only external case allowed}\label{sec:pattern-iii}
+\section{The external-only type of language}\label{sec:pattern-iii}
 
 This section discusses the situation in which only the external case is allowed to surface when it wins the case competition. When the internal case wins the case competition, the result is ungrammatical. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-only-ext-repeated}.
 
 \begin{table}[ht]
   \center
-  \caption{Only external case allowed (repeated)}
+  \caption{Pattern of the external-only type of language (repeated)}
   \begin{tabular}{c|c|c|c}
     \toprule
     \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
@@ -1049,7 +1049,7 @@ To sum up, to my knowledge, there is no language in which only the external case
 
 
 
-\section{Only matching allowed}\label{sec:pattern-iv}
+\section{The matching type of language}\label{sec:pattern-iv}
 
 This section discusses the situation in which the case is neither the internal case nor the external case allowed to surface when either of them wins the competition. In other words, when the internal and the external case differ, there is no grammatical headless relative construction possible. Only when there is a tie, i.e. when the internal and external case match, there is a grammatical result. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-none-repeated}.
 
@@ -1254,7 +1254,7 @@ As far as I am aware, not all of these logical possibilities are attested in nat
 
 \begin{table}[ht]
   \center
-  \caption{Relative pronoun follows case competition}
+  \caption{Relative pronoun follows case competition (with gray-marking)}
   \begin{tabular}{c|c|c|c}
     \toprule
     \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
@@ -1320,7 +1320,7 @@ Figure \ref{fig:attested-headless-relatives-case-competition} shows a diagram th
     \end{tikzpicture}\\
     \bottomrule
   \end{tabular}
-    \caption{Attested patterns in headless relatives with case competition}
+    \caption{Two descriptive parameters generate three language types}
     \label{fig:attested-headless-relatives-case-competition}
 \end{figure}
 
