--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -15,7 +15,7 @@ As I already eluded to in the summary of Chapter \ref{ch:introduction}, I am not
 \citet{himmelreich2017} works this intuition out in a different way.
 }
 
-This chapter is structured as follows. First, I introduce a specific culumative case decomposition \citep{caha2009}. In the two following sections, I show how this case decomposition is able to derive the syncretism and morphological case containment facts from Chapter \ref{ch:recurring}. I make this concrete in the framework Nanosyntax \citep{starke2009}. Finally, I show how the case decomposition relates to the winner in case competition in headless relatives.
+This chapter is structured as follows. First, I introduce a specific cumulative case decomposition \citep{caha2009}. In the two following sections, I show how this case decomposition is able to derive the syncretism and morphological case containment facts from Chapter \ref{ch:recurring}. I make this concrete in the framework Nanosyntax \citep{starke2009}. Finally, I show how the case decomposition relates to the winner in case competition in headless relatives.
 
 
 \section{The basic idea}
@@ -25,7 +25,7 @@ This is illustrated in Table \ref{tbl:case-decomposed}. Accusative has all the f
 
 \begin{table}[ht]
   \center
-	\caption {Case decomposed}
+	\caption {Cumulative case decomposition}
 		\begin{tabular}{ll}
     \toprule
     case      & features                  \\
@@ -57,7 +57,7 @@ In Table \ref{tbl:syncretisms-derive} I repeat the examples that shows the possi
 
 \begin{table}[ht]
   \center
-  \caption {Syncretism patterns (repeated)}
+  \caption {Syncretism patterns in Germanic pronouns (repeated)}
     \input{tables/syncretism-nom-acc-dat.tex}
   \label{tbl:syncretisms-derive}
 \end{table}
