--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -49,7 +49,7 @@ In Chapter \ref{ch:the-basic-idea}, I suggested that languages of the internal-o
     \end{forest}\\
       \bottomrule
   \end{tabular}
-   \caption {\tsc{elh} and \tsc{rp} in the internal-only type}
+   \caption {\tsc{lh} and \tsc{rp} in the internal-only type}
   \label{fig:rel-lh-intonly-simple}
 \end{figure}
 
@@ -57,7 +57,7 @@ These lexical entries lead to the grammaticality pattern shown in Table \ref{tbl
 
 \begin{table}[htbp]
   \center
-  \caption{Grammaticality in the internal-only type}
+  \caption{Grammaticality in the internal-only type (repeated)}
     \begin{adjustbox}{max width=\textwidth}
       \begin{tabular}{cccccc}
         \toprule
@@ -279,7 +279,7 @@ Notice that the animate forms in Table \ref{tbl:mg-paradigm-wh-rels} are the mas
 
 \begin{table}[htbp]
 \center
-\caption {Modern German demonstrative \tit{dieser} `this' \pgcitep{durrell2011}{Table 5.2}}
+\caption {Modern German \tit{dieser} demonstratives \pgcitep{durrell2011}{Table 5.2}}
  \begin{tabular}{ccccc}
  \toprule
              & \tsc{m}.\tsc{sg} & \tsc{n}.\tsc{sg} & \ac{f}.\tsc{sg} & \tsc{pl} \\
@@ -401,7 +401,7 @@ Consider Table \ref{tbl:mg-paradigm-dem} and Table \ref{tbl:mg-paradigm-wh-rels-
 
 \begin{table}[H]
 \center
-\caption {Modern German demonstrative pronouns \pgcitep{durrell2011}{5.4.1}} %dieser source
+\caption {Modern German \tit{der} demonstratives \pgcitep{durrell2011}{5.4.1}} %dieser source
  \begin{tabular}{ccccc}
  \toprule
              & \ac{m}  & \tsc{n} & \ac{f} & \ac{pl} \\
@@ -416,7 +416,7 @@ Consider Table \ref{tbl:mg-paradigm-dem} and Table \ref{tbl:mg-paradigm-wh-rels-
 
 \begin{table}[htbp]
 \center
-\caption {Modern German relative pronouns \pgcitep{durrell2011}{5.3.3}}
+\caption {Modern German relative pronouns \pgcitep{durrell2011}{5.3.3} (repeated)}
 \begin{tabular}{ccc}
 \toprule
             & \ac{an} & \tsc{inan}\\
@@ -1925,7 +1925,7 @@ I derive this from the internal syntax of light heads and relative pronouns in M
       \end{forest}\\
       \bottomrule
   \end{tabular}
-   \caption {\tsc{elh} and \tsc{rp} in Modern German (repeated)}
+   \caption {\tsc{lh} and \tsc{rp} in Modern German (repeated)}
   \label{fig:rel-lh-mg-sum}
 \end{figure}
 
