--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -71,7 +71,7 @@ These lexical entries lead to the grammaticality pattern shown in Table \ref{tbl
 
 \begin{table}[htbp]
   \center
-  \caption{Grammaticality in the matching type}
+  \caption{Grammaticality in the matching type (repeated)}
   \begin{adjustbox}{max width=\textwidth}
   \begin{tabular}{cccccc}
     \toprule
@@ -307,7 +307,7 @@ To determine their exact feature content, I first focus on \tit{mu}. Then, I ext
 
 \begin{table}[htbp]
   \center
-  \caption{Syncretic \tsc{n}/\tsc{m} dative forms \citep{swan2002}}
+  \caption{Syncretism in dative neuter pronouns in Polish \citep{swan2002}}
   \begin{tabular}[b]{ccc}
     \toprule
                       & \tsc{m}.\tsc{dat}   & \tsc{n}.\tsc{dat}  \\
@@ -537,7 +537,7 @@ I show the proposed decomposition in Table \ref{tbl:pol-rp-underl}.
 
 \begin{table}[htbp]
   \center
-  \caption{Polish (in)animate relative pronouns (underlying forms) \pgcitep{swan2002}{160}}
+  \caption{Underlying forms of Polish (in)animate relative pronouns}
   \begin{tabular}[b]{ccc}
     \toprule
               & \tsc{an}  & \tsc{inam}  \\
@@ -559,7 +559,7 @@ I put the underlying forms and the surface form side by side in Table \ref{tbl:p
 
 \begin{table}[htbp]
   \center
-  \caption{Polish inanimate relative pronouns (underlying + surface forms) \pgcitep{swan2002}{160}}
+  \caption{Underlying and surface forms of Polish inanimate relative pronouns}
   \begin{tabular}[b]{ccc}
     \toprule
               & underlying  & surface    \\
@@ -610,7 +610,7 @@ Consider the forms after this first phonological change and the surface forms in
 
 \begin{table}[htbp]
   \center
-  \caption{Polish inanimate relative pronouns (after change 1 + surface forms) \pgcitep{swan2002}{160}}
+  \caption{Polish inanimate relative pronouns (after change 1 + surface forms)}
   \begin{tabular}[b]{ccc}
     \toprule
               & after change 1  & surface    \\
@@ -642,7 +642,7 @@ Consider the forms after this second phonological change and the surface forms i
 
 \begin{table}[htbp]
   \center
-  \caption{Polish inanimate relative pronouns (after change 2 + surface forms) \pgcitep{swan2002}{160}}
+  \caption{Polish inanimate relative pronouns (after change 2 + surface forms)}
   \begin{tabular}[b]{ccc}
     \toprule
               & after change 2  & surface    \\
@@ -705,7 +705,7 @@ The conclusion I draw from this rather long reasoning is that the morpheme \tit{
 
 \begin{table}[htbp]
   \center
-  \caption{Polish dative pronouns (underlying and surface)}
+  \caption{Underlying and surface forms of Polish dative pronouns}
   \begin{tabular}[b]{ccc}
     \toprule
                       & underlying  & surface  \\
@@ -1935,8 +1935,7 @@ I derive this from the internal syntax of light heads and relative pronouns in P
         \bottomrule
     \end{tabular}
   \end{adjustbox}
-   \caption {\tsc{lh} and \tsc{rp} in Polish (repeat
-   ed)}
+   \caption {\tsc{lh} and \tsc{rp} in Polish (repeated)}
   \label{fig:rel-lh-pol-sum}
 \end{figure}
 
