--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -62,7 +62,7 @@ These lexical entries lead to the grammaticality pattern shown in Table  \ref{tb
 
 \begin{table}[htbp]
   \center
-  \caption{Grammaticality in the unrestricted type (part 1)}
+  \caption{Grammaticality in the unrestricted type with \tsc{lh}-1 (repeated)}
   \begin{adjustbox}{max width=\textwidth}
   \begin{tabular}{cccccc}
     \toprule
@@ -229,7 +229,7 @@ These lexical entries lead to the grammaticality pattern shown in Table \ref{tbl
 
 \begin{table}[htbp]
   \center
-  \caption{Grammaticality in the unrestricted type (part 2)}
+  \caption{Grammaticality in the unrestricted type with \tsc{lh}-2 (repeated)}
   \begin{adjustbox}{max width=\textwidth}
   \begin{tabular}{cccccc}
     \toprule
@@ -452,7 +452,7 @@ I argue that the phi features actually correspond to gender features, number fea
 
 \begin{table}[htbp]
  \center
- \caption {Relative pronouns in Old High German \pgcitep{braune2018}{339}}
+ \caption {Old High German relative pronouns \pgcitep{braune2018}{339}}
   \begin{tabular}{cccc}
   \toprule
             & \ac{n}.\ac{sg}  & \ac{m}.\ac{sg}      & \tsc{f}.\ac{sg}    \\
@@ -476,7 +476,7 @@ These different suffixes can be observed in several contexts besides relative pr
 
 \begin{table}[htbp]
  \center
- \caption {Adjectives on \tit{-a-/-ō-} in Old High German \pgcitealt{braune2018}{300}}
+ \caption {Old High German adjectives of \tit{a/ō}-declension \pgcitep{braune2018}{300}}
   \begin{tabular}{cccc}
   \toprule
             & \ac{n}.\ac{sg}    & \ac{m}.\ac{sg}      & \tsc{f}.\ac{sg}    \\
@@ -1918,7 +1918,7 @@ In Figure \ref{fig:ohg-ext-wins-lh}, I give the syntactic structure of the light
       \bottomrule
   \end{tabular}
   \end{adjustbox}
-  \caption {Old High German \tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{nom} ↛ \tit{dhën}/\tit{dhër} (\tsc{dem})}
+  \caption {Old High German \tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{nom} ↛ \tit{dhen}/\tit{dher} (\tsc{dem})}
   \label{fig:ohg-ext-wins-lh}
 \end{figure}
 
@@ -2845,7 +2845,7 @@ I derive this from the internal syntax of two light heads and the internal synax
       \end{forest}\\
       \bottomrule
   \end{tabular}
-   \caption {\tsc{elh} and \tsc{rp} in Old High German (repeated)}
+   \caption {\tsc{elh} and \tsc{rp} in Old High German}
   \label{fig:rel-elh-ohg-sum}
 \end{figure}
 
@@ -2915,7 +2915,7 @@ The features of the demonstrative (which is the second possible light head) are 
       \bottomrule
   \end{tabular}
 \end{adjustbox}
-   \caption {\tsc{lh} and \tsc{rp} in Old High German (repeated)}
+   \caption {\tsc{dem} and \tsc{rp} in Old High German}
   \label{fig:rel-lh-ohg-sum}
 \end{figure}
 
