--- a/languages-without-case-competition.tex
+++ b/languages-without-case-competition.tex
@@ -10,7 +10,7 @@ Table \ref{tbl:no-case-competition-int} shows the pattern of a language in which
 
 \begin{table}[ht]
   \center
-  \caption{Always internal case}
+  \caption{Pattern of the always-internal type of language}
   \begin{tabular}{c|c|c|c}
     \toprule
    \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
@@ -44,7 +44,7 @@ Table \ref{tbl:no-case-competition-ext} shows the pattern of a language in which
 
 \begin{table}[ht]
   \center
-  \caption{Always external case}
+  \caption{Pattern of the always-external type of language}
   \begin{tabular}{c|c|c|c}
     \toprule
    \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
@@ -447,7 +447,7 @@ In Section \ref{sec:pattern-i} to \ref{sec:pattern-iv}, I discussed four differe
 
 \begin{table}[ht]
   \center
-  \caption{Relative pronoun follows case competition}
+  \caption{Relative pronoun follows case competition (repeated)}
   \begin{tabular}{c|c|c|c}
     \toprule
     \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
@@ -585,17 +585,14 @@ I incorporate the parameter that models this pattern into the diagram from Secti
     \bottomrule
   \end{tabular}
   \end{adjustbox}
-    \caption{Attested patterns in headless relatives}
+    \caption{Three descriptive parameters generate four language types}
     \label{fig:typology}
 \end{figure}
 
-I added one parameters.
-
-
-The first parameter, \tit{cases considered}, concerns which cases are considered to surface on the relative pronoun. This parameter distinguishes the always-external type of language from the matching, the internal-only and the unrestricted type of languages.
+I added one parameter. This parameter, \tit{cases considered}, concerns which cases are considered to surface on the relative pronoun. This parameter distinguishes the always-external type of language from the matching, the internal-only and the unrestricted type of languages.
 If the internal and the external case are considered, the language has case competition, and the pattern shown in Table \ref{tbl:case-competition-int-ext-typology} is generated. The two parameters that follow (\tit{allow \tsc{int}} and \tit{allow \tsc{ext}}) come into play, as described in Section \ref{sec:summary-3-patterns}.
 
-If only the external case is considered, the always-external type is generated, illustrated by the pattern in Table \ref{tbl:no-case-competition-ext-typology}.
+If only the external case is considered, the always-external type of language is generated, illustrated by the pattern in Table \ref{tbl:no-case-competition-ext-typology}.
 I left out the option for languages to only consider the internal case, because there does not seem to be a language that uses that strategy.
 In this dissertation I do not offer an explanation for why this type of example should be absent. Future research should determine whether this pattern is actually attested, or whether this option should be excluded and how.
 
@@ -603,7 +600,7 @@ In Table \ref{tbl:possible-headless-relatives}, I give all logically possible pa
 
 \begin{table}[ht]
   \center
-  \caption{Possible patterns for headless relatives}
+  \caption{Logically possible patterns for headless relatives}
     \begin{tabular}{ccc|ccc}
     \toprule
       &   \multicolumn{2}{c}{[\ac{int}]>[\ac{ext}]} & \multicolumn{2}{|c}{[\ac{ext}]>[\ac{int}]} &                  \\
@@ -653,4 +650,4 @@ In Chapter \ref{ch:typology} I discussed different types of languages with case 
 I also do not offer an analysis of the always-external type of language. It seems surprising that a language always takes the case of the main clause, even though a relative pronoun is often claimed to be part of the relative clause. I can see two options for how relative pronouns can take the external case. First, the relative pronoun was actually never in the relative clause, but it was always part of the main clause. Second, the relative pronoun was first part of the relative clause but it has moved to the main clause.
 
 The first option might be what is going on in Old English. It is possible to analyze the relative pronoun as the (light) head of the relative clause. The complementizer \tit{ðe} should then license the internal case. Note that it is not the case that all languages with an overt complementizer behave like this. Gothic also has a complementizer (\tit{ei}), and it is an unrestricted type of language. The difference between the two languages should then be that the Old English complementizer is able to spell out case features, while the Gothic complementizer is not.
-At first sight, there does not seem to be any support for this type of analysis for Modern Greek. Maybe the second option I suggested can be considered for this language. Future research should shed more light on the analysis for these languages.
+At first sight, there does not seem to be any support for this type of analysis for Modern Greek. Possibly, the second option I suggested can be considered for this language. Future research should shed more light on the analysis for these languages.
