--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -789,7 +789,7 @@ Table \ref{tbl:syncretisms} shows examples for each of these possible patterns.
 
 \begin{table}[ht]
   \center
-  \caption {Syncretism patterns}
+  \caption {Syncretism patterns in Germanic pronouns}
     \input{tables/syncretism-nom-acc-dat.tex}
   \label{tbl:syncretisms}
 \end{table}
