--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -33,7 +33,7 @@ In Chapter \ref{ch:typology}, I introduced two descriptive parameters that descr
     \end{tikzpicture}\\
     \bottomrule
   \end{tabular}
-    \caption{Two descriptive parameters generate three language types}
+    \caption{Two descriptive parameters generate three language types (repeated)}
     \label{fig:two-parameters}
 \end{figure}
 
@@ -276,7 +276,7 @@ The different language types appear by going through the chain in \ref{ex:summar
 
 \begin{table}[htbp]
   \center
-  \caption{Overview situations}
+  \caption{Different languages types in different situations}
   \begin{adjustbox}{max width=\textwidth}
   \begin{tabular}{ccc}
     \toprule
@@ -1197,7 +1197,7 @@ In Figure \ref{fig:acc-nom-syn}, I give the example in which the light head bear
       \end{forest}\\
       \bottomrule
   \end{tabular}
-   \caption {\tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{nom} with case syncretism}
+   \caption {\tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{nom} with case syncretism in the internal-only type}
   \label{fig:acc-nom-syn}
 \end{figure}
 
@@ -1284,7 +1284,7 @@ In this chapter and in Chapter \ref{ch:deriving-unrestricted} (in which I work o
       \bottomrule
   \end{tabular}
   \end{adjustbox}
-   \caption {A syncretic light head and relative pronoun}
+   \caption {Syncretism between \tsc{lh} and \tsc{rp}}
   \label{fig:rel-lh-unres-mono}
 \end{figure}
 
@@ -1747,7 +1747,7 @@ In Figure \ref{fig:rel-lh-unres-mono}, I showed a situation in which the light h
       \bottomrule
   \end{tabular}
   \end{adjustbox}
-   \caption {A syncretic light head and relative pronoun}
+   \caption {Syncretism between \tsc{lh} and \tsc{rp} (repeated)}
   \label{fig:rel-lh-unres-mono-rep}
 \end{figure}
 
