--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 \documentclass[hidelinks,a4paper,oneside]{memoir}
 
-\includeonly{languages-without-case-competition}
+% \includeonly{languages-without-case-competition}
 %
 % \setulmarginsandblock{3.3cm}{4cm}{*}
 % \setlrmarginsandblock{3cm}{3cm}{*}
